bug fixes on layouts n color scheme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#FF5722</color>
-    <color name="colorAccent">#553501</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#b36200</color>
+    <color name="colorAccent">#ff8c00</color>
 
     <color name="grey">#929497</color>
 </resources>
