--- a/app/src/main/res/layout/activity_date.xml
+++ b/app/src/main/res/layout/activity_date.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root_layout"
-    android:background="#DAD2D2"
+    android:background="#F3F3F3"
     tools:context=".DateActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -30,7 +29,7 @@
                 android:layout_marginStart="2dp"
                 android:text="month"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -54,7 +53,7 @@
                     android:layout_marginEnd="0dp"
                     android:text="cash"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -66,53 +65,51 @@
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Choose The Date"
-            android:textAlignment="center"
-            android:textSize="24sp"
             android:textColor="#0C0C0C"
-            android:textStyle="bold"/>
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-<LinearLayout
-    android:id="@+id/calenderLayout"
-    android:layout_marginTop="48dp"
-    android:layout_width="300dp"
-    android:background="@drawable/bg_calen"
-    android:layout_height="wrap_content">
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="340dp" />
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/calenderLayout"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/bg_calen">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
         <Button
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="65dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:textColor="#ffffff"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"
             android:background="@drawable/bg_btn"
             android:clickable="true"
             android:focusable="true"
-            android:text="proceed" />
-        </RelativeLayout>
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="proceed"
+            android:textColor="#ffffff" />
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
