--- a/app/src/main/res/layout/activity_date.xml
+++ b/app/src/main/res/layout/activity_date.xml
@@ -67,7 +67,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="36dp"
         android:orientation="vertical">
 
         <TextView
@@ -99,8 +100,8 @@
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
             android:layout_gravity="center"
+            android:layout_marginTop="60dp"
             android:background="@drawable/bg_btn"
             android:clickable="true"
             android:focusable="true"
