--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#b36200</color>
+    <color name="colorPrimaryDark">#520900</color>
     <color name="colorAccent">#ff8c00</color>
 
     <color name="grey">#929497</color>
