--- a/app/src/main/res/layout/activity_daily_expenses.xml
+++ b/app/src/main/res/layout/activity_daily_expenses.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3F3F3"
-    tools:context=".DailyExpensesActivity">
+    tools:context=".view.ui.activity.DailyExpensesActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,7 +14,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/white"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.MyApp.ActionBar"
+        android:theme="@style/ThemeOverlay.MyApp.ActionBarNew"
         tools:targetApi="lollipop">
 
         <RelativeLayout
@@ -65,6 +65,19 @@
     </androidx.appcompat.widget.Toolbar>
 
 
+
+    <Button
+        android:id="@+id/add_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bg_btn"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Add Expenses"
+        android:textStyle="bold"
+        android:textColor="#ffffff" />
 
 
 
