--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#F44336</color>
     <color name="colorAccent">#ff8c00</color>
 
+    <color name="colorThemeOrange">#ff8c00</color>
     <color name="grey">#929497</color>
 </resources>
