--- a/app/src/main/res/layout/activity_new_expenses.xml
+++ b/app/src/main/res/layout/activity_new_expenses.xml
@@ -5,11 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/new_toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        app:navigationIcon="?attr/homeAsUpIndicator" />-->
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -37,8 +32,10 @@
                     android:id="@+id/nameEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Memo"
+                    android:hint="Item Name"
                     android:inputType="text"
+                    android:maxLines="1"
+                    android:maxLength="50"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/ic_edit"/>
 
@@ -47,23 +44,25 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="36dp"
                     android:padding="16dp"
-                    android:id="@+id/rateEditText"
+                    android:id="@+id/amtEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Rate"
+                    android:hint="Amount"
+                    android:maxLines="1"
+                    android:maxLength="10"
                     android:inputType="numberDecimal"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/ic_price"/>
 
                 <Button
-                    android:id="@+id/submit_button"
+                    android:id="@+id/add_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_btn1"
                     android:layout_marginStart="72dp"
                     android:layout_marginEnd="72dp"
                     android:layout_marginTop="36dp"
-                    android:text="Submit"
+                    android:text="Add"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
                     />
