--- a/app/src/main/res/layout/activity_monthly_dateselection.xml
+++ b/app/src/main/res/layout/activity_monthly_dateselection.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3F3F3"
-    tools:context=".view.ui.activity.DateActivity">
+    tools:context=".view.ui.activity.Monthly_DateSelection_Activity">
 
 <!--    <androidx.appcompat.widget.Toolbar-->
 <!--        android:id="@+id/toolbar"-->
