--- a/app/src/main/res/layout/activity_new_expenses.xml
+++ b/app/src/main/res/layout/activity_new_expenses.xml
@@ -24,6 +24,16 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/name_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
+                    android:focusable="false"
+                    android:textColorHint="@color/grey"
+                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
+                    app:errorTextAppearance="@style/error_appearance">
+
                 <EditText
                     android:layout_marginStart="36dp"
                     android:layout_marginTop="12dp"
@@ -39,7 +49,19 @@
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/ic_edit"/>
 
-                <EditText
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/amt_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
+                    android:focusable="false"
+                    android:textColorHint="@color/grey"
+                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
+                    app:errorTextAppearance="@style/error_appearance">
+
+                    <EditText
                     android:layout_marginStart="36dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="36dp"
@@ -53,6 +75,8 @@
                     android:inputType="numberDecimal"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/ic_price"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
                     android:id="@+id/add_button"
