--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,10 +16,9 @@
 
         <LinearLayout
             android:padding="10dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:weightSum="3">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textViewItem"
@@ -27,18 +26,16 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2.2"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textViewAmount"
                 android:text="amount"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
