--- a/app/src/main/res/layout/activity_new_expenses.xml
+++ b/app/src/main/res/layout/activity_new_expenses.xml
@@ -72,7 +72,7 @@
                     android:hint="Amount"
                     android:maxLines="1"
                     android:maxLength="10"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/ic_price"/>
 
