--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,17 +25,36 @@
                 android:text="item"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:ellipsize="end"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
                 android:maxLines="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/textViewAmount"
-                android:text="amount"
-                android:ellipsize="end"
-                android:maxLines="1"
+            <LinearLayout
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rupeeSymbol"
+                    android:layout_marginEnd="5dp"/>
+
+                <TextView
+                    android:id="@+id/textViewAmount"
+                    android:text="amount"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
