--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<androidx.cardview.widget.CardView
+    android:padding="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:elevation="5dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:layout_margin="10dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--    ALL ITEM WE PUT IT IN CARDVIEW -->
-    <androidx.cardview.widget.CardView
-        android:padding="5dp"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:elevation="5dp"
-        android:layout_margin="10dp">
+        android:layout_height="match_parent"
+        android:weightSum="2">
 
         <LinearLayout
             android:padding="10dp"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.7">
 
             <TextView
                 android:id="@+id/textViewItem"
@@ -57,6 +60,22 @@
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="0.3">
+
+        <ImageButton
+            android:id="@+id/img_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_more"
+             />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
