--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -67,7 +67,7 @@
             android:layout_weight="0.3">
 
         <ImageButton
-            android:id="@+id/img_menu"
+            android:id="@+id/overflow_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_more"
