--- a/app/src/main/res/layout/activity_new_expenses.xml
+++ b/app/src/main/res/layout/activity_new_expenses.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:padding="16dp"
                     android:hint="Item Name"
-                    android:inputType="text"
+                    android:inputType="textCapSentences"
                     android:maxLines="1"
                     android:maxLength="20"
                     android:drawablePadding="10dp"
