--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     android:clickable="true"
     android:focusable="true"
     android:elevation="5dp"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_margin="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -62,13 +63,15 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_weight="0.3">
 
         <ImageButton
             android:id="@+id/overflow_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp"
             android:foreground="?attr/selectableItemBackground"
             android:background="@drawable/ic_more"
              />
