--- a/app/src/main/res/layout/activity_daily_expenses.xml
+++ b/app/src/main/res/layout/activity_daily_expenses.xml
@@ -15,9 +15,14 @@
         android:layout_height="?attr/actionBarSize"
         android:elevation="4dp" />
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
+
 
     <androidx.core.widget.NestedScrollView
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -43,8 +48,9 @@
 
 
 
-    </androidx.core.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <Button
