--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/action_edit"
-        android:title="edit"
+        android:title="Edit"
         android:visible="true"
         app:showAsAction="collapseActionView" />
 
     <item
         android:id="@+id/action_delete"
-        android:title="delete"
+        android:title="Delete"
         android:visible="true"
         app:showAsAction="collapseActionView" />
 
