--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -73,7 +73,9 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:padding="10dp"
-            android:layout_margin="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:foreground="?attr/selectableItemBackground"
             android:background="@drawable/ic_more"
              />
