--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -66,13 +66,12 @@
             android:layout_height="match_parent"
             android:layout_weight="0.3">
 
-        <ImageButton
-            android:id="@+id/overflow_imagebutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/overflow_image"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:padding="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
