--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,7 +26,8 @@
             <TextView
                 android:id="@+id/textViewItem"
                 android:text="item"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="18sp"
+                android:textColor="#000000"
                 android:ellipsize="end"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
@@ -45,12 +46,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rupeeSymbol"
+                    android:textSize="16sp"
+                    android:textColor="@color/grey"
                     android:layout_marginEnd="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewAmount"
                     android:text="amount"
+                    android:textSize="16sp"
                     android:ellipsize="end"
+                    android:textColor="@color/grey"
                     android:maxLines="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -72,7 +77,7 @@
             android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:foreground="?attr/selectableItemBackground"
