--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -73,13 +73,14 @@
 
         <ImageView
             android:id="@+id/overflow_image"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:padding="10dp"
             android:foreground="?attr/selectableItemBackground"
             android:background="@drawable/ic_more"
              />
