--- a/app/src/main/res/layout/activity_new_expenses.xml
+++ b/app/src/main/res/layout/activity_new_expenses.xml
@@ -78,6 +78,19 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <ImageView
+                    android:layout_marginStart="36dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="36dp"
+                    android:padding="16dp"
+                    android:id="@+id/itemImageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:src="@drawable/ic_add_image"
+                    />
+
                 <Button
                     android:id="@+id/add_button"
                     android:layout_width="match_parent"
