--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,14 +14,23 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="2">
+        android:weightSum="3">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:tag="image_tag"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="0.5"
+            android:src="@drawable/ic_picture_preview"/>
 
         <LinearLayout
             android:padding="10dp"
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.7">
+            android:layout_weight="2.2">
 
             <TextView
                 android:id="@+id/textViewItem"
