--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,7 +17,7 @@
         android:weightSum="3">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/item_imageView"
             android:tag="image_tag"
             android:layout_width="0dp"
             android:layout_height="match_parent"
